--- a/docroot/sites/all/themes/cascadia/sass/components/_navigation.scss
+++ b/docroot/sites/all/themes/cascadia/sass/components/_navigation.scss
@@ -7,6 +7,7 @@
   .l-region--navigation {
     display: none;
     position: absolute;
+    z-index: 3;
     width: 100%;
     background-color: $primary-color;
     padding-top: 10px;
